# BICI-sensors-project

./: ..gitignore.swp  .gitignore  .gitignore.save  .gitignore.save.1  .gitmodules  BICIProject_workspace.cywrk  README.md
BackOfHand.cydsn/: BackOfHand.cydwr  BackOfHand.cyprj  main.c
BackOfHand.cydsn/TopDesign/: TopDesign.cysch
FingerBig.cydsn/: FingerBig.cydwr  FingerBig.cyprj  main.c  main.h
FingerBig.cydsn/TopDesign/: TopDesign.cysch
FingerSmall.cydsn/: FingerSmall.cydwr  FingerSmall.cyprj  main.c  main.h
FingerSmall.cydsn/TopDesign/: TopDesign.cysch
FingerTip.cydsn/: FingerTip.cydwr  FingerTip.cyprj  main.c
FingerTip.cydsn/PSoC_4_Capsense_Tuning_Project/: PSoC4_Workspace01.cywrk
FingerTip.cydsn/PSoC_4_Capsense_Tuning_Project/Design01.cydsn/: Design01.cydwr  Design01.cyprj  main.c
FingerTip.cydsn/TopDesign/: TopDesign.cysch
I2C_Bootloader.cydsn/: I2C_Bootloader.cyprj
I2C_Bootloader.cydsn/TopDesign/: TopDesign.cysch
Palm.cydsn/: Palm.cydwr  Palm.cyprj  main.c  main.h
Palm.cydsn/TopDesign/: TopDesign.cysch
ROS_COMM_WS/: Pcan_Bus_Setup  Pcan_Downloads  SimLab.xml  Wonik.xml  frames.gv  point_cloud_vis.py  serial_USB_Setup
ROS_COMM_WS/PCAN-Basic_Linux-4.5.2/: readme.txt
ROS_COMM_WS/PCAN-Basic_Linux-4.5.2/libpcanbasic/: changelog.md
ROS_COMM_WS/PCAN-Basic_Linux-4.5.2/pcanbasic_java/: changelog.md
ROS_COMM_WS/peak-linux-driver-8.13.0/driver/: .Module.symvers.cmd  .modules.order.cmd  .pcan.ko.cmd  .pcan.mod.cmd  .pcan.mod.o.cmd  .pcan.o.cmd  Makefile  dkms.conf  modules.order  pcan.h  pcan.ko  pcan.mod  pcan.mod.c  pcan.mod.dwo  pcanfd.h  release_notes.txt
ROS_COMM_WS/peak-linux-driver-8.13.0/lib/: libpcanfd.h
ROS_COMM_WS/peak-linux-driver-8.13.0/libpcanbasic/: changelog.md
ROS_COMM_WS/peak-linux-driver-8.13.0/test/: bitratetest  filtertest  pcan-settings  pcanfdtst  receivetest  receivetest_posix  transmitest  transmitest_posix
ROS_COMM_WS/src/allegro_hand_controllers/: package.xml
ROS_COMM_WS/src/allegro_hand_description/: allegro_hand_config.rviz  allegro_hand_description_right.xacro
ROS_COMM_WS/src/allegro_hand_taxels/: CMakeLists.txt  package.xml
ROS_COMM_WS/src/allegro_hand_taxels/msg/: coordinates_saving.msg
ROS_COMM_WS/src/allegro_hand_taxels/src/: coordinates_listener.cpp  joint_states_merger.cpp  joint_states_saver.cpp  saving_node.cpp  sensor_emulator.cpp
ROS_COMM_WS/src/allegro_hw_moveit/: .setup_assistant  (+2 more)
ROS_COMM_WS/src/serial-example-master/: CMakeLists.txt  package.xml
ROS_COMM_WS/src/serial-example-master/msg/: TactileData.msg
ROS_COMM_WS/src/serial-example-master/scripts/: sensor_vis.py
ROS_COMM_WS/src/serial-example-master/src/: sensor_parser.cpp  serial_example_node.cpp
ROS_COMM_WS/src/serial_example/: CMakeLists.txt
ROS_COMM_WS/src/serial_example/scripts/: sensor_vis.py
ROS_COMM_WS/src/serial_example/src/: sensor_parser.cpp  serial_example_node.cpp
SensorHub.cydsn/: SensorHub.cydwr  SensorHub.cyprj  main.c  main.h
SensorHub.cydsn/TopDesign/: TopDesign.cysch
SensorHubTest.cydsn/: SensorHubTest.cydwr  SensorHubTest.cyprj  comm_driver.h  main.c  main.h
SensorHubTest.cydsn/TopDesign/: TopDesign.cysch
UR5/catkin_ws/: .~lock.joints_data.csv#  joints_data.csv  joints_data.ods
(+166 files in other folders)
